--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body {
+	background-image: url("xp.jpg");
+	background-size: 100% 100%;
+}
+
 .topRow {
 	display: flex;
 	flex-direction: row;
@@ -9,6 +14,7 @@
 .icon {
 	width: 240px;
 	height: 240px;
+	transition-duration: 0.1s;
 }
 
 .icon > a {
