--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 body {
 	background-image: url("xp.jpg");
-	background-size: 100% 100%;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-attachment: fixed;
 }
 
 .topRow {
@@ -30,11 +33,11 @@ body {
 }
 
 .email {
-	background-image: url("gmail.svg");
+	background-image: url("icons8-gmail.svg");
 }
 
 .github {
-	background-image: url("github.svg");
+	background-image: url("icons8-github.svg");
 }
 
 .website {
