--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
 .icon > a {
 	display: block;
 	background-size: contain;
+	background-repeat: no-repeat;
 	height: 100%;
 	width: 100%;
 }
